# FlipSIDE-Macaraoni

./: .gitignore  CMakeLists.txt  conanfile.py  project.lua
src/: Main.mcpp
src/nnd32/: AnimationFrame.mcpp  CharacterSprite.mcpp  CinemaType.mcpp  Dependencies.mcpp  Game.mcpp  README.rst  Sound.mcpp  Vb.mcpp  Vertex.mcpp  View.mcpp  World.mcpp
vs/FlipSIDE/: FlipSIDE.sln  FlipSIDE.vcxproj  FlipSIDE.vcxproj.filters
